--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,6 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+
+KINI Biè Honoré <hkini48@gmail.com>
+Oyebamiji Mustapha Oyetunde <oyebamijimustapha44@gmail.com>
